--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to [Your Class Name]</h1>
+        <h1>Welcome to CS 4961/6961 </h1>
         <nav>
             <a href="syllabus.html">Syllabus</a> |
             <a href="assignments.html">Assignments</a>
         </nav>
     </header>
     <main>
-        <h2>About the Class</h2>
-        <p>This course covers ...</p>
+<h2>About the Class</h2>
+
+        <p>This course covers how to design robust (less buggy)
+systems that employ parallelism and floating-point arithmetic.
+
+
+</p>
     </main>
     <footer>
         <p>© [Year] [Your Name or Institution]</p>
