--- a/index.html
+++ b/index.html
@@ -3,6 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to [Class Name]! A hub for resources, announcements, and learning.">
+    <title>Welcome to [Class Name]</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: #333;
+            line-height: 1.6;
+        }
+        header {
+            background: linear-gradient(to right, #4CAF50, #81C784);
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        header p {
+            margin: 10px 0 0;
+            font-size: 1.2em;
+        }
+        nav {
+            background: #333;
+            color: white;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .hero {
+            background: url('https://via.placeholder.com/1920x600') no-repeat center center/cover;
+            color: white;
+            padding: 50px 20px;
+            text-align: center;
+        }
+        .hero h2 {
+            font-size: 2em;
+            margin: 0;
+        }
+        .hero p {
+            margin: 20px 0 0;
+            font-size: 1.1em;
+        }
+        .content {
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+        }
+        .content h2 {
+            color: #4CAF50;
+            margin-top: 0;
+        }
+        footer {
+            background: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to [Class Name]</h1>
+        <p>Your journey in [Topic or Subject] starts here!</p>
+    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#schedule">Schedule</a>
+        <a href="#resources">Resources</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="hero">
+        <h2>Explore. Learn. Achieve.</h2>
+        <p>Join us for an engaging learning experience.</p>
+    </div>
+    <div class="content">
+        <section id="about">
+            <h2>About This Class</h2>
+            <p>Provide a brief overview of your class. What will students learn? What makes this class special?</p>
+        </section>
+        <section id="schedule">
+            <h2>Class Schedule</h2>
+            <p>Outline your class schedule. Include important dates and topics covered each week.</p>
+        </section>
+        <section id="resources">
+            <h2>Resources</h2>
+            <p>List helpful links, recommended readings, and other resources for students.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Provide your email address or office hours so students can reach you.</p>
+        </section>
+    </div>
+    <footer>
+        <p>© 2024 [Class Name]. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
+<!--- 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,4 +144,7 @@ systems that employ parallelism and floating-point arithmetic.
         <p>© [Year] [Your Name or Institution]</p>
     </footer>
 </body>
-</html>
+	</html>
+
+	--->
+	
