--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to [Class Name]! A hub for resources, announcements, and learning.">
-    <title>Welcome to [Class Name]</title>
+    <title>Welcome to CS 4961/6961 </title>
     <style>
         body {
             margin: 0;
@@ -77,7 +77,9 @@
 <body>
     <header>
         <h1>Welcome to [Class Name]</h1>
-        <p>Your journey in [Topic or Subject] starts here!</p>
+        <p>Your quest to understand and deal with how parallelism and
+floating-point can go wrong -- when you build HPC and AI/ML systems --
+starts here!</p>
     </header>
     <nav>
         <a href="#about">About</a>
