fixed name of class

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to [Class Name]</h1>
+        <h1>Welcome to CS 4961/6961 :  Parallel Numerical Software Correctness </h1>
         <p>Your quest to understand and deal with how parallelism and
 floating-point can go wrong -- when you build HPC and AI/ML systems --
 starts here!</p>
