fixed name of class

--- a/index.html
+++ b/index.html
@@ -94,7 +94,21 @@ starts here!</p>
     <div class="content">
         <section id="about">
             <h2>About This Class</h2>
-            <p>Provide a brief overview of your class. What will students learn? What makes this class special?</p>
+            <p>
+			  This class is aimed as a reality check: do we really
+			  understand how today's AI and ML systems are built upto
+			  and including what the underlying GPU code does?
+			  Other examples of software we like to study
+			  include various scientific computing
+			  software systems such as lossy data compression systems
+			  and the software realizing irregular graph algorithms.
+
+			  Such software systems are difficult to create, understand, debug
+			  and repair. These systems have many
+			  interfaces, follow
+			  a plethora of conventions regarding number representations, and
+			  involve a basic set of parallel programming skills to implement.
+			</p>
         </section>
         <section id="schedule">
             <h2>Class Schedule</h2>
