fixed name of class

--- a/index.html
+++ b/index.html
@@ -97,17 +97,28 @@ starts here!</p>
             <p>
 			  This class is aimed as a reality check: do we really
 			  understand how today's AI and ML systems are built upto
-			  and including what the underlying GPU code does?
+			  and including the design of the underlying GPU codes?
+			  We hear stories of GPUs being the central currency of
+			  today's computing; wouldn't it be nice to understand GPUs
+			  and how one can code-up simple AI and ML systems from
+			  scratch to run on them?
+
 			  Other examples of software we like to study
 			  include various scientific computing
 			  software systems such as lossy data compression systems
 			  and the software realizing irregular graph algorithms.
+			  Even these systems run fast(er) on GPUs---calling for
+			  a similar understanding.
 
 			  Such software systems are difficult to create, understand, debug
 			  and repair. These systems have many
 			  interfaces, follow
 			  a plethora of conventions regarding number representations, and
 			  involve a basic set of parallel programming skills to implement.
+
+			  I myself know many things well in this area but <h2> am
+				equally eager (as you might be) </h2> to build and run
+			  some of these artifacts from scratch myself!
 			</p>
         </section>
         <section id="schedule">
