fixed name of class

--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@ starts here!</p>
 			  I myself know many things well in this area but <h2> am
 				equally eager (as you might be) </h2> to build and run
 			  some of these artifacts from scratch myself!
+
+			  Why don't we engage in a grand adventure over a semester where
+			  we teach each other? We will present a few real GPU codes to you
+			  on day-1 (more will be added as we go along). To help understand these
+			  codes better, we will also be presenting some Python codes that either
+			  mirror these codes or call upon the GPU codes to then export
+			  efficient higher level functions.'
 			</p>
         </section>
         <section id="schedule">
