fixed name of class

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ starts here!</p>
 			  and how one can code-up simple AI and ML systems from
 			  scratch to run on them?
 
+			  <br>			  
+
 			  Other examples of software we like to study
 			  include various scientific computing
 			  software systems such as lossy data compression systems
@@ -110,22 +112,39 @@ starts here!</p>
 			  Even these systems run fast(er) on GPUs---calling for
 			  a similar understanding.
 
+			  <br>			  
+
 			  Such software systems are difficult to create, understand, debug
 			  and repair. These systems have many
 			  interfaces, follow
 			  a plethora of conventions regarding number representations, and
 			  involve a basic set of parallel programming skills to implement.
 
-			  I myself know many things well in this area but <h2> am
-				equally eager (as you might be) </h2> to build and run
-			  some of these artifacts from scratch myself!
+			  <br>			  
+
+			  I myself know many things well in this area but  am
+				equally eager (as you might be)  to build and run
+			  some of these artifacts from scratch myself! I like to take
+			  built artifacts apart and reassemble them. I don't have a huge
+			  recent track-record of doing this (I've done tons and tons of this
+			  over my lifetime---including filing-down epoxy-encrusted
+			  circuits to their pins and reassembling them). But it is time for me
+			  to change course too! I feel I'll emerge a bit more "genuine"
+			  if I engage in such "ablution" at least for a little while.
+
+			  <br>			  
 
 			  Why don't we engage in a grand adventure over a semester where
 			  we teach each other? We will present a few real GPU codes to you
 			  on day-1 (more will be added as we go along). To help understand these
 			  codes better, we will also be presenting some Python codes that either
 			  mirror these codes or call upon the GPU codes to then export
-			  efficient higher level functions.'
+			  efficient higher level functions.
+
+			  <br>
+			  
+			  In other words,
+			  
 			</p>
         </section>
         <section id="schedule">
