fixed name of class

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ starts here!</p>
 			  circuits to their pins and reassembling them). But it is time for me
 			  to change course too! I feel I'll emerge a bit more "genuine"
 			  if I engage in such "ablution" at least for a little while.
+			  Remember "it is never late"!
 
 			  <br>			  
 
@@ -139,11 +140,15 @@ starts here!</p>
 			  on day-1 (more will be added as we go along). To help understand these
 			  codes better, we will also be presenting some Python codes that either
 			  mirror these codes or call upon the GPU codes to then export
-			  efficient higher level functions.
+			  efficient higher level functions. We will try and
+			  understand the precautions
+			  taken in erecting the numeric structures and parallelism structures
+			  of these codes. Then <b> we will all build different systems, treating
+				the disassembly results as a "kit of parts". </b>
 
 			  <br>
 			  
-			  In other words,
+
 			  
 			</p>
         </section>
