fixed name of class

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ starts here!</p>
             <h2>About This Class</h2>
             <p>
 			  This class is aimed as a reality check: do we really
-			  understand how today's AI and ML systems are built upto
+			  understand how today's AI and ML systems are built---upto
 			  and including the design of the underlying GPU codes?
 			  We hear stories of GPUs being the central currency of
 			  today's computing; wouldn't it be nice to understand GPUs
@@ -125,12 +125,19 @@ starts here!</p>
 			  <br>
 			  <br>			  			  
 
-			  I myself know many things well in this area but  am
-				equally eager (as you might be)  to build and run
-			  some of these artifacts from scratch myself! I like to take
-			  built artifacts apart and reassemble them. I don't have a huge
-			  recent track-record of doing this (I've done tons and tons of this
-			  over my lifetime---including filing-down epoxy-encrusted
+			  I myself know many things well in this area.
+			  <b> But I don't know a ton of things---precisely
+				the reason for teaching. Also I know how to
+				learn (with your help and interactions) about them! </b>
+			  And I know that many experts out there lack this
+			  closer-to-the-metal knowledge.
+			  That is what I am eager (as you also better be) eager  to build and learn.
+
+			  Historically, I have liked taking
+			  artifacts apart and reassembling them. I don't have a huge
+			  recent track-record of doing this (I've done  tons of this
+			  over my lifetime, especially five decades ago---including
+			  filing-down epoxy-encrusted
 			  circuits to their pins and reassembling them). But it is time for me
 			  to change course too! I feel I'll emerge a bit more "genuine"
 			  if I engage in such "ablution" at least for a little while.
@@ -221,7 +228,10 @@ starts here!</p>
 				  that powers the world and our lives. </li>
 				<li> A realization that things just don't automatically
 				  work correctly! Journey this arduous path.				</li>
-
+				<li> Learning in context; GPU programming takes years and years
+				  to master; here, we will see some aspects of GPU
+				  programming rather well---a different and focus-inducing
+				  experience. </li>
 				<li> Something publishable. <b> The idea
 					is to ride the rough road a little, and then
 					switch to a cool project. </b>. For instance,
@@ -235,7 +245,31 @@ starts here!</p>
         </section>
         <section id="schedule">
             <h2>Class Schedule</h2>
-            <p>Outline your class schedule. Include important dates and topics covered each week.</p>
+            <p>
+			  Here are the dates and a schedule.
+			</p>
+
+<table border="1">
+  <thead>
+    <tr>
+      <th>Day</th>
+      <th>Topic</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1/7</td>
+      <td>Overview</td>
+    </tr>
+    <tr>
+      <td>1/9</td>
+      <td>Present baby GPT in Python (used previously for UG training)</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 2</th>
+    </tr>
+
+			
         </section>
         <section id="resources">
             <h2>Resources</h2>
