fixed name of class

--- a/index.html
+++ b/index.html
@@ -247,8 +247,6 @@ starts here!</p>
             <h2>Class Schedule</h2>
             <p>
 			  Here are the dates and a schedule.
-			</p>
-
 <table border="1">
   <thead>
     <tr>
@@ -268,7 +266,98 @@ starts here!</p>
     <tr>
       <th colspan="2">Week 2</th>
     </tr>
-
+    <tr>
+      <td>1/14</td>
+      <td>Present details of baby GPT</td>
+    </tr>
+    <tr>
+      <td>1/16</td>
+      <td>Homework-1 on understanding the baby GPT</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 3</th>
+    </tr>
+    <tr>
+      <td>1/21</td>
+      <td>Correctness tools for GPU: floating-point</td>
+    </tr>
+    <tr>
+      <td>1/23</td>
+      <td>Correctness tools for GPU: concurrency</td>
+    </tr>
+    <tr>
+      <td>1/28</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <td>1/30</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 4</th>
+    </tr>
+    <tr>
+      <td>2/4</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <td>2/6</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 5</th>
+    </tr>
+    <tr>
+      <td>2/11</td>
+      <td>Project option discussions</td>
+    </tr>
+    <tr>
+      <td>2/13</td>
+      <td>Project option discussions</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 6</th>
+    </tr>
+    <tr>
+      <td>2/18</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <td>2/20</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 7</th>
+    </tr>
+    <tr>
+      <td>2/25</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <td>2/27</td>
+      <td>Student presentations (at least 4)</td>
+    </tr>
+    <tr>
+      <th colspan="2">Week 8</th>
+    </tr>
+    <tr>
+      <td>3/3</td>
+      <td>Final tie-together lecture</td>
+    </tr>
+    <tr>
+      <td>3/5</td>
+      <td>Final tie-together lecture</td>
+    </tr>
+    <tr>
+      <th colspan="2">SPRING BREAK</th>
+    </tr>
+    <tr>
+      <th colspan="2">PROJECT MEETINGS DURING CLASS TIME</th>
+    </tr>
+  </tbody>
+</table>
+			  
+			</p>
 			
         </section>
         <section id="resources">
