fixed name of class

--- a/index.html
+++ b/index.html
@@ -237,7 +237,17 @@ starts here!</p>
 					switch to a cool project. </b>. For instance,
 				  reconstituting some parts of a system you tear down
 				  in a new language (Rust?) and/or proving properties---all game.
-				</li>				
+				</li>
+
+				<li> GRADES: We will give you a passing grade with good participation
+				  and nothing else. For a strong grade, do a project,
+				  break/recreate something, write a good 10-12 page report.
+				  A paper coming out of the classwork after a ton of participation
+				  and teaching us a lot (!) is grounds for a solid A.
+				  The goals of this course are not set in stone. <b> If you
+					push us in the right direction, this will be a fun class. </b>
+				  We will promise utmost hard work on our side.
+				</li>
 </ul>			  
 			  
 			  
@@ -362,7 +372,9 @@ starts here!</p>
         </section>
         <section id="resources">
             <h2>Resources</h2>
-            <p>List helpful links, recommended readings, and other resources for students.</p>
+            <p>
+			  Will be provided.
+			  </p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
