fixed name of class

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@ starts here!</p>
 			  scratch to run on them?
 
 			  <br>
- 			  <br>			  
 
 			  Other examples of software we like to study
 			  include various scientific computing
@@ -113,7 +112,7 @@ starts here!</p>
 			  Even these systems run fast(er) on GPUs---calling for
 			  a similar understanding.
 
-			  <br>
+
 			  <br>			  			  
 
 			  Such software systems are difficult to create, understand, debug
@@ -122,7 +121,7 @@ starts here!</p>
 			  a plethora of conventions regarding number representations, and
 			  involve a basic set of parallel programming skills to implement.
 
-			  <br>
+
 			  <br>			  			  
 
 			  I myself know many things well in this area.
@@ -143,7 +142,7 @@ starts here!</p>
 			  if I engage in such "ablution" at least for a little while.
 			  Remember "it is never late"!
 
-			  <br>
+
 			  <br>			  			  
 
 			  Why don't we engage in a grand adventure over a semester where
@@ -157,13 +156,12 @@ starts here!</p>
 			  of these codes. Then <b> we will all build different systems, treating
 				the disassembly results as a "kit of parts". </b>
 
-			  <br>
+
 			  <br>			  
 
 			  So what systems will we tear down? 
 			  Here are a few examples:
 			  <br>
-			  <br>			  
 
 			  <ul>
   <li> The autograd function of some simple neural networks, including baby LLMs.</li>
@@ -175,7 +173,7 @@ starts here!</p>
 	What shall we study?
 			  Here are a few examples:
 			  <br>
-			  <br>			  
+
 
 			  <ul>
   <li> How to do backprop through all sorts of layers including auto-encoders. </li>
@@ -189,7 +187,7 @@ starts here!</p>
 
 	What bugs shall we understand to locate and mitigate?
 			  <br>
-			  <br>			  
+
 
 			  <ul>
   <li> Rounding errors. </li>
@@ -198,11 +196,11 @@ starts here!</p>
 </ul>
 			  
 
-			  <strong> I am scared; I hardly know 80% of what you said. How can
-				I even do this?
+			  <strong> "I am scared; I hardly know 80% of what you said. How can
+				I even do this?"
 			  </strong>
 			  Fear not!
-			  <br>
+
 			  <br>			  
 
 			  <ul>
@@ -296,6 +294,9 @@ starts here!</p>
       <td>Correctness tools for GPU: concurrency</td>
     </tr>
     <tr>
+      <th colspan="2">Week 4</th>
+    </tr>	
+    <tr>
       <td>1/28</td>
       <td>Student presentations (at least 4)</td>
     </tr>
@@ -304,7 +305,7 @@ starts here!</p>
       <td>Student presentations (at least 4)</td>
     </tr>
     <tr>
-      <th colspan="2">Week 4</th>
+      <th colspan="2">Week 5</th>
     </tr>
     <tr>
       <td>2/4</td>
@@ -315,7 +316,7 @@ starts here!</p>
       <td>Student presentations (at least 4)</td>
     </tr>
     <tr>
-      <th colspan="2">Week 5</th>
+      <th colspan="2">Week 6</th>
     </tr>
     <tr>
       <td>2/11</td>
@@ -326,7 +327,7 @@ starts here!</p>
       <td>Project option discussions</td>
     </tr>
     <tr>
-      <th colspan="2">Week 6</th>
+      <th colspan="2">Week 7</th>
     </tr>
     <tr>
       <td>2/18</td>
@@ -337,7 +338,7 @@ starts here!</p>
       <td>Student presentations (at least 4)</td>
     </tr>
     <tr>
-      <th colspan="2">Week 7</th>
+      <th colspan="2">Week 8</th>
     </tr>
     <tr>
       <td>2/25</td>
@@ -348,7 +349,7 @@ starts here!</p>
       <td>Student presentations (at least 4)</td>
     </tr>
     <tr>
-      <th colspan="2">Week 8</th>
+      <th colspan="2">Week 9</th>
     </tr>
     <tr>
       <td>3/3</td>
