--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@ starts here!</p>
         <section id="resources">
             <h2>Resources</h2>
             <p>
-			  Will be provided.
+			  Will be expanded.
+<a href="https://drive.google.com/drive/folders/1BGvDASE9u6Uts90XY450cCksxkqUGP5C?usp=sharing" target="_blank"> CURRENT RESOURCES</a>
 			  </p>
         </section>
         <section id="contact">
