fixed name of class

--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@ starts here!</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Provide your email address or office hours so students can reach you.</p>
+            <p>
+<a href="https://www.cs.utah.edu/~ganesh" target="_blank"> Get email from here, please. </a>
+			  </p>
         </section>
     </div>
     <footer>
