fixed name of class

--- a/index.html
+++ b/index.html
@@ -208,8 +208,13 @@ starts here!</p>
 				  meet you regularly. </li>
 				<li> If you lack the basic GPU chops, you'll be given study material. Then
 				  you come and present it in class.
-				  <b>This is not your traditional class. You do the talking mostly! There will be
-					plenty of 1-1s. </b>
+				  This is not your traditional class. You do the talking mostly! There will be
+				  plenty of 1-1s. </li>
+				  <li>
+					<b> How each week will go: </b> We will have a meeting with you both during class
+					and outside of class. We will teach you stuff 1-1. Then you follow-up and come prepared and
+					present. Presentation slides will be longer - you may get 10min for presenting a gist. The
+					rest is your learning to do a project!
 				</li>
 			  </ul>
 
