fixed name of class

--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@ starts here!</p>
       <th>Topic</th>
     </tr>
   </thead>
+    <tr>
+      <th colspan="2">Week 1</th>
+    </tr>  
   <tbody>
     <tr>
       <td>1/7</td>
@@ -303,11 +306,16 @@ starts here!</p>
     </tr>
     <tr>
       <td>1/21</td>
-      <td>Correctness tools for GPU: floating-point</td>
+      <td>Correctness tools for GPU: floating-point
+		and concurrency (there will be
+		online recordings kept before class).</td>
     </tr>
     <tr>
       <td>1/23</td>
-      <td>Correctness tools for GPU: concurrency</td>
+      <td> Present other example codes
+		such as lossy compressors and
+		irregular algorithms (recordings to
+		be kept online before class). </td>
     </tr>
     <tr>
       <th colspan="2">Week 4</th>
@@ -379,8 +387,17 @@ starts here!</p>
       <th colspan="2">SPRING BREAK</th>
     </tr>
     <tr>
-      <th colspan="2">PROJECT MEETINGS DURING CLASS TIME</th>
+      <th colspan="2">PROJECT MEETINGS DURING CLASS TIME as well as a generous number of outside hours.
+	  The idea is to stay busy, help you debug, and together learn stuff even outside of class.</th>
     </tr>
+    <tr>
+      <th colspan="2"> We will come
+		to class and discuss projects
+		and other topics till the end of the
+		semester. There could also be guest-lectures
+	  and other events.</th>
+    </tr>
+	
   </tbody>
 </table>
 			  
