fixed name of class

--- a/index.html
+++ b/index.html
@@ -407,7 +407,10 @@ starts here!</p>
         <section id="resources">
             <h2>Resources</h2>
             <p>
-			  Will be expanded.
+			  Will be expanded. The link
+			  that follows will get organized
+			  over time (right now it is
+			  a dump of stuff).
 <a href="https://drive.google.com/drive/folders/1BGvDASE9u6Uts90XY450cCksxkqUGP5C?usp=sharing" target="_blank"> CURRENT RESOURCES</a>
 			  </p>
         </section>
