--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@ starts here!</p>
         <a href="#contact">Contact</a>
     </nav>
     <div class="hero">
-        <h2>Explore. Learn. Achieve.</h2>
-        <p>Join us for an engaging learning experience.</p>
+     <!-->   <h2>Explore. Learn. Achieve.</h2>
+     <p>Join us for an engaging learning experience.</p> -->
+<div class="hero">
+    <img src="https://drive.google.com/file/d/1lhrzfe_ABo7aNXVUUjOKHa-akdkvZs7e/view?usp=drive_link" alt="Parallelism and Floating-Point" style="width: 100%; height: auto;">
+</div>	 
     </div>
     <div class="content">
         <section id="about">
