fixed name of class

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@ starts here!</p>
         <a href="#resources">Resources</a>
         <a href="#contact">Contact</a>
     </nav>
-     <!-->   <h2>Explore. Learn. Achieve.</h2>
-     <p>Join us for an engaging learning experience.</p> -->
+     <p>Join us for an engaging learning experience.</p> 
 <div class="hero">
     <img src="https://drive.google.com/file/d/1lhrzfe_ABo7aNXVUUjOKHa-akdkvZs7e/view?usp=drive_link" alt="Parallelism and Floating-Point" style="width: 100%; height: auto;">
 </div>	 
