fixed name of class

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         <h1>Welcome to CS 4961/6961 :  Parallel Numerical Software Correctness </h1>
         <p>Your quest to understand and deal with how parallelism and
 floating-point can go wrong -- when you build HPC and AI/ML systems --
-starts here!</p>
+		  starts here!
+     Join us for an engaging learning experience.
+		</p>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -87,9 +89,9 @@ starts here!</p>
         <a href="#resources">Resources</a>
         <a href="#contact">Contact</a>
     </nav>
-     <p>Join us for an engaging learning experience.</p> 
 <div class="hero">
-    <img src="https://drive.google.com/file/d/1lhrzfe_ABo7aNXVUUjOKHa-akdkvZs7e/view?usp=drive_link" alt="Parallelism and Floating-Point" style="width: 100%; height: auto;">
+  <!--  <img src="https://drive.google.com/file/d/1lhrzfe_ABo7aNXVUUjOKHa-akdkvZs7e/view?usp=drive_link" alt="Parallelism and Floating-Point" style="width: 100%; height: auto;"> -->
+  <img src="https://drive.google.com/uc?export=view&id=1lhrzfe_ABo7aNXVUUjOKHa-akdkvZs7e" alt="Parallelism and Floating-Point">
 </div>	 
     <div class="content">
         <section id="about">
