--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 </ul>
 			  
 
+			  			  <strong> I may need to cap this class and choose 
+							students who are oriented toward research a bit more. Why?
+			  </strong>
+						  We will need to access GPUs. Also this class requires the right
+						  kind of background. For UGs, we will teach you what you don't know.
+						  For Grads, I will prefer students with strong interest in publication
+						  (and I may talk 1-1 to assess that). Please show up on day-1 and
+						  of course meet me beforehand as you wish and as we find common times to meet.
+						  
 			  <strong> One may say "I am scared; I hardly know 80% of what you said. How can
 				I even do this?"
 			  </strong>
