--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 						  (and I may talk 1-1 to assess that). Please show up on day-1 and
 						  of course meet me beforehand as you wish and as we find common times to meet.
 
-						  <br>
-						  <br>
+						  <br> <br>
 						  
 			  <strong> One may say "I am scared; I hardly know 80% of what you said. How can
 				I even do this?"
@@ -244,7 +243,7 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 
 
 
-			  <strong> You may ask ""What is in it for me?""
+			  <strong> You may ask "What is in it for me?"
 			  </strong>
 			  A lot.
 			  
@@ -273,7 +272,11 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 				  and teaching us a lot (!) is grounds for a solid A.
 				  The goals of this course are not set in stone. <b> If you
 					push us in the right direction, this will be a fun class. </b>
-				  We will promise utmost hard work on our side.
+				  We will promise utmost hard work on our side,
+				  <b> esp. given that this course has not been offered
+					by me before. I do plan to write a book that captures
+					the lessons from this class---hoping to create and
+					prototype some chapters during this class. </b>
 
 				</li>
 
