--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
         <section id="schedule">
             <h2>Class Schedule</h2>
             <p>
-			  Here are the dates and a schedule.
+			  The class meets Tue and Thu from 2pm to 3:20pm in WEB 1230.
+			  Here is a more specific schedule.
 <table border="1">
   <thead>
     <tr>
