--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			  <ul>
 				<li> I and my TMs (Harvey Dam) and Staff Researcher (Dr. Mark Baranowski) will
 				  meet you regularly. </li>
-				<li> If you lack the basic GPU chops, you'll be given study material. Then
+				<li> If you lack the basic GPU chops, you'll be given study material
+				  (see for example
+				  Mark Harris's blog on CUDA https://developer.nvidia.com/blog/even-easier-introduction-cuda/ with A Colab notebook to explore the above https://colab.research.google.com/github/NVDLI/notebooks/blob/master/even-easier-cuda/An_Even_Easier_Introduction_to_CUDA.ipynb).
+				  Then
 				  you come and present it in class.
 				  This is not your traditional class. You do the talking mostly! There will be
 				  plenty of 1-1s. </li>
