--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 				  meet you regularly. </li>
 				<li> If you lack the basic GPU chops, you'll be given study material
 				  (see for example
-				  <a href="https://developer.nvidia.com/blog/even-easier-introduction-cuda/" Mark
+				  <a href="https://developer.nvidia.com/blog/even-easier-introduction-cuda/"> Mark
 					 Harris's Blog </a> with A Colab notebook to explore the above
-							<a href="https://colab.research.google.com/github/NVDLI/notebooks/blob/master/even-easier-cuda/An_Even_Easier_Introduction_to_CUDA.ipynb" here </a>>).
+							<a href="https://colab.research.google.com/github/NVDLI/notebooks/blob/master/even-easier-cuda/An_Even_Easier_Introduction_to_CUDA.ipynb"> here </a>>).
 				  Then
 				  you come and present it in class.
 				  This is not your traditional class. You do the talking mostly! There will be
