--- a/index.html
+++ b/index.html
@@ -247,6 +247,13 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			  </ul>
 
 
+			  <!---Role of Correctness -->
+
+			  <img src="./hammer-looking-for-nail.webp" width="300" height="200" alt="DALL.E says don't do this'">
+			  <img src="./nail-seeking-right-hammer.webp" width="300" height="200" alt="Instead, it says DO THIS!">
+
+			  <!---  -->
+			  
 
 			  <strong> You may ask "What is in it for me?"
 			  </strong>
