--- a/index.html
+++ b/index.html
@@ -249,10 +249,15 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			  <br>
 			  
 			  <!---Role of Correctness -->
-
+<br>
+  			  <strong> How to approach correctness?
+			  </strong>			  
+<br>
 <div style="text-align: center;">
-			  <img src="./hammer-looking-for-nail.webp" width="300" height="200" alt="DALL.E says don't do this'">
-			  <img src="./nail-seeking-right-hammer.webp" width="300" height="200" alt="Instead, it says DO THIS!">
+  <img src="./hammer-looking-for-nail.webp" width="300" height="200">
+  (Not this!)
+  <img src="./nail-seeking-right-hammer.webp" width="300" height="200">
+  (But this!)
 </div>
 
 			  <!---  -->
