--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ floating-point can go wrong -- when you build HPC and AI/ML systems --
 <div style="text-align: center;">
   <img src = "./main-img.webp" width="450" height="300">
   <br>
-  (Parallelism and floating-point as imagined by DALL-E.)
+  (Parallelism and floating-point as imagined by DALL.E; more DALL.E images below.)
   </div>
 
   
