--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 <br>
 <div style="text-align: center;">
   <img src="./hammer-looking-for-nail.webp" width="300" height="200">
-  (Not this!)
+  <small> Not hammer looking for nail</small>
   <img src="./nail-seeking-right-hammer.webp" width="300" height="200">
-  (But this!)
+  <small> but nail seeking right hammer</small>
 </div>
 
 			  <!---  -->
