--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 <br>
 <div style="text-align: center;">
   <img src="./hammer-looking-for-nail.webp" width="300" height="200">
-  <small> Not hammer looking for nail</small>
+  <small> Not a hammer looking for any nail</small>
   <img src="./nail-seeking-right-hammer.webp" width="300" height="200">
-  <small> but nail seeking right hammer</small>
+  <small> ...but a nail seeking the right hammer</small>
 </div>
 
 			  <!---  -->
