--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 			  
 			  <!---Role of Correctness -->
 <br>
-  			  <strong> How to approach correctness?
+  			  <strong> How to approach correctness? This is DALL.E's opinion :-)'
 			  </strong>			  
 <br>
 <div style="text-align: center;">
-  <img src="./hammer-looking-for-nail.webp" width="300" height="200">
-  <small> Not a hammer looking for any nail</small>
-  <img src="./nail-seeking-right-hammer.webp" width="300" height="200">
-  <small> ...but a nail seeking the right hammer</small>
+  <img src="./hammer-looking-for-nail.webp" width="450" height="300">
+  <small> Don't be a hammer looking for any nail</small>
+  <img src="./nail-seeking-right-hammer.webp" width="450" height="300">
+  <small> ...but be nails seeking the right set of hammers</small>
 </div>
 
 			  <!---  -->
