--- a/index.html
+++ b/index.html
@@ -181,6 +181,19 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
   <li> Various lossy compressors and graph algorithm codes (written by pioneers in this area). </li>
 			  </ul>
 
+			  <br>
+			  <strong>
+				Here are some reference materials for learning about these topics:
+				
+			  </strong>
+
+			  <ul>
+		<li> <a href = "https://github.com/damtharvey/reu2023">  A course </a> with embedded quizzes (and answers) by TM Harvey Dam, PhD student.
+
+		<li> <a href = "https://www.manning.com/books/build-a-large-language-model-from-scratch"> An inexpensive but very good book. </a>
+		  Its Jupyter notebooks are kept <a href="https://github.com/rasbt/LLMs-from-scratch"> here </a>
+		  
+			  <br>
 
 	What shall we study?
 			  Here are a few examples:
