--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 
 			  <br>
 			  <strong>
-				Here are some reference materials for learning about these topics:
+				Here are some reference materials for learning about these topics; more will be given:
 				
 			  </strong>
 
@@ -192,8 +192,20 @@ DALL·E 2024-12-10 17.30.58 - A cartoon-style image of many GPU chips working in
 
 		<li> <a href = "https://www.manning.com/books/build-a-large-language-model-from-scratch"> An inexpensive but very good book. </a>
 		  Its Jupyter notebooks are kept <a href="https://github.com/rasbt/LLMs-from-scratch"> here </a>
-		  
-			  <br>
+
+		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/LC/"> The LC Compression Framework </a> from Texas State University.
+
+		<li> <a href = "https://github.com/damtharvey/pyblaz"> The PyBlaz Lossy Compressor </a> developed at the University of Utah.
+
+		<li> <a href = "https://userweb.cs.txstate.edu/~burtscher/abstracts.html#TOPC24" The  Indigo-3 Graph Algorithm Benchmark Suite,</a>
+				allowing programmable bug injection.
+
+     	<li> <a href = "https://github.com/LLNL/GPU-FPX"> The GPU-FPX Framework </a> for floating-point exception detection.
+
+     	<li> <a href = "https://github.com/LLNL/FTTN"> A Feature-Targeted Testing Method  </a> for Tensor Cores.
+			
+			<br>
+  	  	    <br>
 
 	What shall we study?
 			  Here are a few examples:
